bug fix version mobile

--- a/src/components/styles/_global.scss
+++ b/src/components/styles/_global.scss
@@ -59,6 +59,7 @@ figcaption {
   display: flex;
   font-size: 3rem;
   margin: 20px 0;
+  align-items: center;
   font-family: Helvetica-Bold;
 }
 .title-about {
@@ -69,5 +70,5 @@ figcaption {
 .container-titles > p {
   margin: 0;
   color: $number-color;
-  margin-right: 8px;
+  margin-right: 3px;
 }
