--- a/src/components/styles/_header.scss
+++ b/src/components/styles/_header.scss
@@ -31,9 +31,3 @@ header {
     text-decoration: underline;
   }
 }
-
-@media screen and (max-width: 400px) {
-  header {
-    height: 100px;
-  }
-}
