--- a/src/components/styles/_others-projects.scss
+++ b/src/components/styles/_others-projects.scss
@@ -1,5 +1,5 @@
 .container-others-projects {
-  margin-bottom: 100px;
+  margin-bottom: 150px;
 }
 .project-list {
   list-style: none;
