--- a/src/components/styles/_projects.scss
+++ b/src/components/styles/_projects.scss
@@ -64,13 +64,7 @@
     }
   }
 }
-.short-description {
-  color: #484848;
-  font-style: italic;
-  font-size: 1.4rem;
-  margin: 0;
-  margin-bottom: 5px;
-}
+
 .link {
   font-size: 1.6rem;
   margin: 0;
